results/SVCOMP/houdini/log-StringBuilderCapLen04-2024_03_19_04_11_56.txt
public class StringBuilderCapLen04 {
  //@ non_null
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures arg == null ==> \result;
  //@ ensures arg == null ==> !\result;
  //@ ensures arg != null ==> \result;
  //@ ensures arg != null ==> !\result;
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    return buffer.capacity() == 69;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("");
    f("123");
    f("&fgaes%");
    f("<bad/>");
    f("Diffblue  is leader in automatic test case generation");
    f("aaaaaaaaaabbbbbbbbbbaaaaaaaaaabbbbbbbbbbcccccccccc1");
  }
}


/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:2: error: No modifiers are allowed prior to a lightweight specification case
  //@ non_null
      ^
1 error

public class StringBuilderCapLen04 {
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures arg == null ==> \result;
  //@ ensures arg == null ==> !\result;
  //@ ensures arg != null ==> \result;
  //@ ensures arg != null ==> !\result;
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    return buffer.capacity() == 69;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("");
    f("123");
    f("&fgaes%");
    f("<bad/>");
    f("Diffblue  is leader in automatic test case generation");
    f("aaaaaaaaaabbbbbbbbbbaaaaaaaaaabbbbbbbbbbcccccccccc1");
  }
}


OpenJML not responding. Aborted.
